--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiogram==3.15.0
 aiohappyeyeballs==2.4.4
 aiohttp==3.10.11
 aiosignal==1.3.1
+aiosqlite==0.20.0
 annotated-types==0.7.0
 async-timeout==5.0.1
 attrs==24.2.0
@@ -15,6 +16,7 @@ multidict==6.1.0
 propcache==0.2.1
 pydantic==2.9.2
 pydantic_core==2.23.4
+python-dotenv==1.0.1
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 yarl==1.18.3
