--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiohttp==3.10.11
 aiosignal==1.3.1
 aiosqlite==0.20.0
 annotated-types==0.7.0
+APScheduler==3.11.0
 async-timeout==5.0.1
 attrs==24.2.0
 certifi==2024.8.30
@@ -19,4 +20,6 @@ pydantic_core==2.23.4
 python-dotenv==1.0.1
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
+tzdata==2024.2
+tzlocal==5.2
 yarl==1.18.3
