--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ propcache==0.2.1
 pydantic==2.9.2
 pydantic_core==2.23.4
 python-dotenv==1.0.1
+pytz==2024.2
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 tzdata==2024.2
