--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,12 @@ cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 frozenlist==1.5.0
+google-api-core==2.24.0
+google-api-python-client==2.154.0
 google-auth==2.36.0
+google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.1
+googleapis-common-protos==1.66.0
 greenlet==3.1.1
 gspread==6.1.4
 gspread-dataframe==4.0.0
@@ -26,6 +30,8 @@ oauth2client==4.1.3
 oauthlib==3.2.2
 pandas==2.2.3
 propcache==0.2.1
+proto-plus==1.25.0
+protobuf==5.29.1
 pyasn1==0.6.1
 pyasn1_modules==0.4.1
 pydantic==2.9.2
@@ -42,5 +48,6 @@ SQLAlchemy==2.0.36
 typing_extensions==4.12.2
 tzdata==2024.2
 tzlocal==5.2
+uritemplate==4.1.1
 urllib3==2.2.3
 yarl==1.18.3
