--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ attrs==24.2.0
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+docopt==0.6.2
 frozenlist==1.5.0
 google-api-core==2.24.0
 google-api-python-client==2.154.0
@@ -25,6 +26,7 @@ httplib2==0.22.0
 idna==3.10
 magic-filter==1.0.12
 multidict==6.1.0
+num2words==0.5.13
 numpy==2.2.0
 oauth2client==4.1.3
 oauthlib==3.2.2
@@ -40,9 +42,11 @@ pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
+RapidFuzz==3.10.1
 requests==2.32.3
 requests-oauthlib==2.0.0
 rsa==4.9
+ru-word2number==1.1
 six==1.17.0
 SQLAlchemy==2.0.36
 typing_extensions==4.12.2
